# crafting-interpreters

./: .editorconfig  .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml  settings.gradle
app/: build.gradle
app/src/main/java/org/craftinginterpreters/: App.java
app/src/test/java/org/crafinginterpreters/: AppTest.java
app/src/test/java/org/craftinginterpreters/: AppTest.java
java/: build.gradle
java/org/zweili/: AstPrinter.java  Expr.java  Lox.java  Parser.java  Scanner.java
java/org/zweili/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  Parser.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
java/src/main/java/org/zweili/: Lox.java  Scanner.java  Token.java  TokenType.java
python/lox/: __main__.py  ast_printer.py  error.py  expr.py  lox.py  runtime_error.py  scanner.py  stmt.py  token_cls.py  token_parser.py  token_type.py  visitor.py
python/tests/: test_lox.py  test_main.py  test_scanner.py  test_token_cls.py  test_token_type.py
tooling/nix/expr_class/: default.nix  expressions.nix
tooling/nix/stmt_class/: default.nix  statements.nix
