[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lox"
version = "0.1.0"
requires-python = ">=3.12"

[tool.black]
line-length=80

[tool.hatch.build.targets.sdit]
include = [
  "python",
  "README.md"
]
[tool.hatch.build.targets.wheel]
packages = [
  "python/lox",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
  "I",
  "ALL"
]
ignore = [
  "T201" # I like to use print sometimes
]
[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
  "D", # disable documentation warnings
  "INP001", # disable namespace warnings
  "S101", # disable assert warnings
]
